<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:orderInCategory="100"
            android:onClick="adduser"
            android:title="@string/add" />

        <item
            android:orderInCategory="100"
            android:onClick="mark"
            android:title="@string/addmark"/>

        <item
            android:onClick="comm"
            android:orderInCategory="100"
            android:title="@string/addcomment" />
        <item
            android:onClick="regout"
            android:orderInCategory="100"
            android:title="@string/exit_from_account" />
        <item
            android:onClick="myidgo"
            android:id="@+id/myid"
            android:title="Мой ID" />

</menu>